--- a/var/cpanel/apps/hostium_holamundo.conf
+++ b/var/cpanel/apps/hostium_holamundo.conf
@@ -1,8 +1,8 @@
-name=Hostium Hola Mundo
+name=hostium_holamundo
 displayname=Hola Mundo
+module=hostium_holamundo
 group=plugins
 acls=all
 feature=
-module=hostium_holamundo
 service=whostmgr
 url=/cgi/hostium_holamundo.cgi
